# aufgabenSWE

./: .gitignore  Aufgabe10.c  Aufgabe11.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  Aufgabe7.c  Aufgabe8.c  README.md
Aufgaben/: Aufgabe12.c  Aufgabe17.c  Aufgabe18.c  Aufgabe19.c  Aufgabe2.c  Aufgabe6.c
Aufgaben/1_Semester/: Aufgabe1.c  Aufgabe10.c  Aufgabe13_14.c  Aufgabe15.c  Aufgabe16.c  Aufgabe19.c  Aufgabe4.c  Aufgabe9.c
Aufgaben/2_Semester/: 01_Task.c  02_Task.c  03_Task.c  04_Task.c  05_CommentTest.c  05_Task.c  06_Task.c  07_Task.c  08_Task.c  buchung.csv
Aufgaben/2_Semester/Bonus_01_Task/: CMakeLists.txt  centralLogClient.c  centralLogServer.c
BonusAufgaben/: BA01.c
Uebungen/: aufgabenStrings.c  sortingAlg.cpp
